# obj

./: .gitignore  README.md  devops流程.txt  excute_rq.py  pyproject.toml  requirements.txt
async-awite/: asynbc_demo1.py  async_run_func.py  bukl_create_file.py  test_futures_obj.py  thread.py  thread_pool.py  yield.py
celery_study/: c_demo1.py  celery.py  execute.py  run_tasks.py  tasks.py
compute/: current_limiting.py  fib.py
cool_pad_script/: ftp_test.py
demo/: bluck_execute_sql.py  build_zip_file_md5.py  demo.py  demo1.py  demo__get__.py  demo_func.py  export.py  format_str.py  hellow.py  image_thumb.py  log_demo.py  meta_demo.py  pathlib_demo.py  property_demo.py  push_share_code.py  req_demo.py  s_name.session  sort_demo.py  super_demo.py  test_log.py  test_network.py  unzip_big_file.py
design_pattern/: __init__.py  adapter.py  builder.py  facade.py  factory.py  meditor.py  my_factory.py  observer.py  prototype.py  proxy.py  state.py  strategy.py
es/: es_demo.py
es_demo/: demo.py
example/: 1.sh  demo1.py  func_overlie.py  shell_returen.py  test_request.py  zipfile_test.py
execute_excel/: ec_excel.py  ec_excel.ui  pyxl_test.py
exercise/: classmeta.py  decorator.py  npl_dispose.py  singleton.py
fs/: first_task.py  steal_water.py
ftp_demo/: thread_scp.py
grammar/: class_empty.py  descriptor.py  exception_demo.py  func_tools.py  functools_pack.py  md5_jiami.py  meta_class_parameter.py  metaclass_demo.py  raise_use.py  recursion.py  singleton.py  stdout_demo.py  super_func.py  type_grammmar.py  witch_keyword.py
interview_question/: get_statistic_fiel.py  reversal_str.py  test_collections.py  yield_read_big_file.py
jd_cookie/: push_cookie_to_ql.py
jira_demo/: jira_create_issue.py
kafka_demo/: consumer.py  example.py  producer.py  test_producer.py
kafkapy/: producer.py
leetcode/: get_sub_str.py  move_number.py
loogers_demo/: log_test.py  log_test_module.py
love_data_structure/: flibo.py  linked_list.py
matpl/: base_demo.py
minio_demo/: client_test.py
mongo/: quick_start.py
my_langchain/: demo.py
nmpy/: init.py
opcv/: base_img.py  mpl.py  op_canny.py  (+12 more)
(+135 files in other folders)
